--- a/site/composer.json
+++ b/site/composer.json
@@ -24,7 +24,8 @@
     "forum": "https://discourse.roots.io/category/bedrock"
   },
   "config": {
-    "preferred-install": "dist"
+    "preferred-install": "dist",
+    "ACF_PRO_KEY":"b3JkZXJfaWQ9MTA5ODUxfHR5cGU9ZGV2ZWxvcGVyfGRhdGU9MjAxNy0wNy0wNiAxMzoyNjoyMg=="
   },
   "repositories": [
     {
